--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-# VUE_APP_API_URL=https://trogdor22.pythonanywhere.com
+VUE_APP_API_URL=https://trogdor22.pythonanywhere.com
 
 
-VUE_APP_API_URL=http://127.0.0.1:5000
+# VUE_APP_API_URL=http://127.0.0.1:5000
